--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h1>
                   You make the world a better place.
                   <br>
-                  We give you the toolkit to do it'
+                  We give you the toolkit to do it.
                   <small>
                     You make the world a better place.
                     We give you the toolkit to do it
